[package]
name = "rnpm"
version = "0.1.0"
authors = ["Ábris SIMON <abris96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.7.1"
